# tocata-stream-server

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  db_init.sql  install-docker.sh  package-lock.json  package.json  server.js  session.js  users.js
.github/workflows/: deploy-image.yml
aws/tocataStreamDisconnect/: index.mjs
aws/tocataStreamLogin/: index.mjs  package-lock.json  package.json
aws/tocataStreamRoute/: index.mjs
client/: CMakeLists.txt  README.md  analyze.py  codec.cc  codec.h  connection.cc  connection.h  main.cc  opus_rtp.cc  opus_rtp.h  opus_wrapper.cc  opus_wrapper.h  samples_queue.cc  samples_queue.h  session.cc  session.h
docker-compose/: docker-compose.yml  init.sql  nginx.conf
opus-decoder/: CMakeLists.txt  OpusDecoder.cpp  OpusDecoder.hpp  post.js
server/: package-lock.json  package.json  server.js  session.js
static/: listen-worker.js  listen.html  listen.js  opus-decoder.js  opus-decoder.wasm  opus-stream-decoder.js  tocata-broadcast-connection.js
test/: test-broadcast.js
views/: login.pug  profile.pug
